# arrow-rayon

./: Cargo.toml  README.md
benches/: bench.rs
src/: lib.rs
src/parallel_array/: README.md  binary_array.rs  boolean_array.rs  byte_array.rs  date_array.rs  decimal_array.rs  duration_array.rs  float_array.rs  int_array.rs  interval_array.rs  mod.rs  parallel_binary_array.rs  parallel_boolean_array.rs  parallel_byte_array.rs  parallel_date_array.rs  parallel_decimal_array.rs  parallel_duration_array.rs  parallel_float_array.rs  parallel_int_array.rs  parallel_interval_array.rs  parallel_primitive_array.rs  parallel_string_array.rs  parallel_time_array.rs  parallel_timestamp_array.rs  parallel_uint_array.rs  primitive_array.rs  string_array.rs  time_array.rs  timestamp_array.rs  uint_array.rs
