[package]
name = "arrow-rayon"
version = "0.1.0"
edition = "2021"
authors = ["xhwhis <hi@whis.me>"]
description = "Use parallel iterators for Apache Arrow with rayon"
homepage = "https://github/xhwhis/arrow-rayon"
repository = "https://github/xhwhis/arrow-rayon"
license = "Unlicense"

[dependencies]
arrow-array = "53.0.0"
arrow-buffer = "53.0.0"
arrow-data = "53.0.0"
arrow-schema = "53.0.0"
rayon = "1.10.0"

[lints.rust]
macro_use_extern_crate = "warn"
single_use_lifetimes = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unused_crate_dependencies = "warn"
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"

[lints.clippy]
alloc_instead_of_core = "warn"
doc_markdown = "warn"
empty_structs_with_brackets = "warn"
explicit_into_iter_loop = "warn"
explicit_iter_loop = "warn"
filter_map_next = "warn"
flat_map_option = "warn"
get_unwrap = "warn"
implicit_clone = "warn"
inconsistent_struct_constructor = "warn"
manual_assert = "warn"
manual_let_else = "warn"
manual_ok_or = "warn"
print_stderr = "warn"
print_stdout = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
redundant_clone = "warn"
redundant_type_annotations = "warn"
rest_pat_in_fully_bound_structs = "warn"
str_to_string = "warn"
string_to_string = "warn"
trait_duplication_in_bounds = "warn"
type_repetition_in_bounds = "warn"
uninlined_format_args = "warn"
unnecessary_wraps = "warn"
unnested_or_patterns = "warn"
unused_async = "warn"
used_underscore_binding = "warn"
