[package]
name = "arrow-rayon"
version = "0.0.2"
edition = "2021"
authors = ["xhwhis <hi@whis.me>"]
description = "Use parallel iterators for Apache Arrow with rayon"
keywords = ["arrow", "concurrency", "parallel"]
categories = ["concurrency"]
documentation = "https://docs.rs/arrow-rayon"
repository = "https://github.com/xhwhis/arrow-rayon"
license = "Unlicense"

[dependencies]
arrow-array = "52.2.0"
arrow-buffer = "52.2.0"
arrow-data = "52.2.0"
arrow-schema = "52.2.0"
half = "2.4.1"
rayon = "1.10.0"

[dev-dependencies]
criterion = "0.5.1"
geos = "9.0.0"
rand = "0.8.5"

[[bench]]
name = "bench"
harness = false

[lints.rust]
macro_use_extern_crate = "warn"
single_use_lifetimes = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"

[lints.clippy]
alloc_instead_of_core = "warn"
doc_markdown = "warn"
empty_structs_with_brackets = "warn"
explicit_into_iter_loop = "warn"
explicit_iter_loop = "warn"
filter_map_next = "warn"
flat_map_option = "warn"
get_unwrap = "warn"
implicit_clone = "warn"
inconsistent_struct_constructor = "warn"
manual_assert = "warn"
manual_let_else = "warn"
manual_ok_or = "warn"
print_stderr = "warn"
print_stdout = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
redundant_clone = "warn"
redundant_type_annotations = "warn"
rest_pat_in_fully_bound_structs = "warn"
str_to_string = "warn"
string_to_string = "warn"
trait_duplication_in_bounds = "warn"
type_repetition_in_bounds = "warn"
uninlined_format_args = "warn"
unnecessary_wraps = "warn"
unnested_or_patterns = "warn"
unused_async = "warn"
used_underscore_binding = "warn"
